--- a/package.json
+++ b/package.json
@@ -2,16 +2,29 @@
   "name": "my-app",
   "version": "0.0.1",
   "private": true,
-  "devDependencies": {
-    "react-scripts": "0.1.0"
-  },
+  "description": "Feline and Friends Finder with React",
+  "main": "server.js",
   "dependencies": {
+    "body-parser": "^1.4.3",
+    "express": "^4.4.5",
     "react": "^15.2.1",
     "react-dom": "^15.2.1"
   },
+  "devDependencies": {
+    "react-scripts": "0.1.0"
+  },
+  "repository": {
+  "type": "git",
+  "url": "https://github.com/eamoses/feline-finder-refactor.git"
+},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "eject": "react-scripts eject"
+  },
+  "author": "emilymoses",
+  "homepage": "https://github.com/eamoses",
+  "engines" : {
+    "node" : "^6.2.x"
   }
 }
